// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader should allow a component to be passed as a prop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-header "
        data-component="page-header"
      >
        <div
          class="grid"
        >
          <div
            data-component="grid-item"
            data-g="12 md:12"
          >
            <h1
              class="page-header__heading "
            >
              This is our heading
            </h1>
            <p
              class="page-header__cta"
            >
              <button>
                Click Me
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-header "
      data-component="page-header"
    >
      <div
        class="grid"
      >
        <div
          data-component="grid-item"
          data-g="12 md:12"
        >
          <h1
            class="page-header__heading "
          >
            This is our heading
          </h1>
          <p
            class="page-header__cta"
          >
            <button>
              Click Me
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PageHeader should match the snapshot with all props supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-header page-header--full-width-dark"
        data-component="page-header"
      >
        <div
          class="page-header__full-width-container"
        >
          <div
            class="grid"
          >
            <div
              data-component="grid-item"
              data-g="12 md:9"
            >
              <div
                class="page-header__breadcrumbs"
              >
                <nav
                  aria-label="Breadcrumbs"
                  data-component="breadcrumbs"
                  role="navigation"
                >
                  <ol
                    class="breadcrumbs"
                  >
                    <li
                      class="breadcrumbs__crumb"
                    >
                      <a
                        href="https://www.nice.org.uk/"
                      >
                        Home
                      </a>
                    </li>
                    <li
                      class="breadcrumbs__crumb"
                    >
                      <a
                        href="https://www.nice.org.uk/guidance"
                      >
                        NICE guidance
                      </a>
                    </li>
                    <li
                      class="breadcrumbs__crumb"
                    >
                      <span>
                        Published
                      </span>
                    </li>
                  </ol>
                </nav>
                <script
                  type="application/ld+json"
                >
                  {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "Home"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "https://www.nice.org.uk/guidance",
        "name": "NICE guidance"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Published"
      }
    }
  ]
}
                </script>
              </div>
              <h1
                class="page-header__heading "
              >
                <span
                  class="page-header__pre-heading"
                >
                  Systemic lupus erythematosus
                </span>
                Products
              </h1>
              <p
                class="page-header__lead"
              >
                A list of all our products on systemic lupus erythematosus
              </p>
              <div
                class="page-header__description"
              >
                A description of whatever is on the page
              </div>
              <p
                class="page-header__cta"
              >
                See more below
              </p>
            </div>
            <div
              class="page-header__second-section"
              data-component="grid-item"
              data-g="12 md:3"
            >
              <aside>
                <h3>
                  I am a second section
                </h3>
                <ol>
                  <li>
                    One
                  </li>
                  <li>
                    Two
                  </li>
                  <li>
                    Three
                  </li>
                </ol>
              </aside>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-header page-header--full-width-dark"
      data-component="page-header"
    >
      <div
        class="page-header__full-width-container"
      >
        <div
          class="grid"
        >
          <div
            data-component="grid-item"
            data-g="12 md:9"
          >
            <div
              class="page-header__breadcrumbs"
            >
              <nav
                aria-label="Breadcrumbs"
                data-component="breadcrumbs"
                role="navigation"
              >
                <ol
                  class="breadcrumbs"
                >
                  <li
                    class="breadcrumbs__crumb"
                  >
                    <a
                      href="https://www.nice.org.uk/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    class="breadcrumbs__crumb"
                  >
                    <a
                      href="https://www.nice.org.uk/guidance"
                    >
                      NICE guidance
                    </a>
                  </li>
                  <li
                    class="breadcrumbs__crumb"
                  >
                    <span>
                      Published
                    </span>
                  </li>
                </ol>
              </nav>
              <script
                type="application/ld+json"
              >
                {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "https://www.nice.org.uk/",
        "name": "Home"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "https://www.nice.org.uk/guidance",
        "name": "NICE guidance"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Published"
      }
    }
  ]
}
              </script>
            </div>
            <h1
              class="page-header__heading "
            >
              <span
                class="page-header__pre-heading"
              >
                Systemic lupus erythematosus
              </span>
              Products
            </h1>
            <p
              class="page-header__lead"
            >
              A list of all our products on systemic lupus erythematosus
            </p>
            <div
              class="page-header__description"
            >
              A description of whatever is on the page
            </div>
            <p
              class="page-header__cta"
            >
              See more below
            </p>
          </div>
          <div
            class="page-header__second-section"
            data-component="grid-item"
            data-g="12 md:3"
          >
            <aside>
              <h3>
                I am a second section
              </h3>
              <ol>
                <li>
                  One
                </li>
                <li>
                  Two
                </li>
                <li>
                  Three
                </li>
              </ol>
            </aside>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PageHeader should match the snapshot with only required heading prop supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-header "
        data-component="page-header"
      >
        <div
          class="grid"
        >
          <div
            data-component="grid-item"
            data-g="12 md:12"
          >
            <h1
              class="page-header__heading "
            >
              This is our heading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-header "
      data-component="page-header"
    >
      <div
        class="grid"
      >
        <div
          data-component="grid-item"
          data-g="12 md:12"
        >
          <h1
            class="page-header__heading "
          >
            This is our heading
          </h1>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
